Add enable debug macro

--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,9 @@
 
 AC_PREREQ([2.69])
 AC_INIT([hexedit], [0.1.0], [mail@rzelnick.com])
+AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE([1.16 foreign subdir-objects])
+AX_CHECK_ENABLE_DEBUG([no])
 
 # Checks for programs.
 AC_PROG_CXX
