Remove make check from travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: cpp
 before_script:
         ./bootstrap.sh
 script:
-        ./configure && make && make check
+        ./configure && make
