--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: cpp
+before_install:
+          - sudo apt-get -q update
+          - sudo apt-get -y install gcc-8
 before_script:
         ./bootstrap.sh
 script:
-        ./configure && make
+        ./configure && make hexedit_CPPFLAGS="-Wall -Wextra -I include/ --std=c++11"
